[tool.poetry]
name = "databases-example"
version = "0.1.0"
description = ""
authors = ["npavlin <np@letsnova.ru>"]
readme = "README.md"
packages = [{include = "databases_example"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.10"
numpy = "^2.1.3"
influxdb-client = {extras = ["ciso"], version = "^1.47.0"}
pymongo = "^4.10.1"
neo4j = "^5.26.0"
chromadb = "^0.5.20"
redis = "^5.2.0"
pyle38 = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
